--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: [asfsffse]
+title: [The journey of a thousand li begins with the first step]
 description: [ahrttjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj]
