--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
-remote_theme: pages-themes/hacker@v0.2.0
+remote_theme: pages-themes/modernist@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: [The journey of a thousand li begins with the first step]
-description: [ahrttjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj]
